@@ -1200,7 +1200,8 @@ Please wait before trying again.',
 'resetpass_announce'        => 'You logged in with a temporary e-mailed code.
 To finish logging in, you must set a new password here:',
 'resetpass_text'            => '<!-- Add text here -->', # only translate this message to other languages if you have to change it
-'resetpass_header'          => 'Change account password',
+'changepassword-legend'     => 'Change account password',
+'changepassword-text'       => '<!-- Add text here -->',
 'oldpassword'               => 'Old password:',
 'newpassword'               => 'New password:',
 'retypenew'                 => 'Retype new password:',
@@ -1249,7 +1250,7 @@ request, or if you have remembered your original password, and you no longer
 wish to change it, you may ignore this message and continue using your old
 password.',
 'passwordreset-emailelement'       => 'Username: $1
-Temporary password: $2',
+Reset link: $2',
 'passwordreset-emailsent'          => 'A reminder e-mail has been sent.',
 'passwordreset-emailsent-capture'  => 'A reminder e-mail has been sent, which is shown below.',
 'passwordreset-emailerror-capture' => 'A reminder e-mail was generated, which is shown below, but sending it to the user failed: $1',
